# blood-bound

./: .gitignore  Cargo.toml  index.html
Android/: settings.gradle.kts
Android/app/: CMakeLists.txt  build.gradle.kts
Android/app/src/androidTest/java/io/dispersia/bloodbound/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/io/dispersia/bloodbound/: MainActivity.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
src/: lib.rs
