cargo-features = ["codegen-backend"]

[package]
name = "blood_bound"
version = "0.1.0"
edition = "2024"

[lib]
name = "blood_bound"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "blood_bound_game"

[dependencies]
bevy = "=0.16.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1
#codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
#codegen-backend = "llvm"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

